# sn-neutron-94

./: CMakeLists.txt  README.md  _snsolver.cp312-win_amd64.pyd  build.ps1  example_xs.txt
python/: test_dsa.py  test_kinetics.py  test_solver.py
python/snsolver/: __init__.py
src/: bindings.cpp  dsa.cpp  dsa.h  kinetics.cpp  kinetics.h  mesh.cpp  mesh.h  quadrature.cpp  quadrature.h  quasistatic.cpp  quasistatic.h  solver.cpp  solver.h  xsdata.cpp  xsdata.h
